Make Query Hints not dependable on loki/prom

--- a/src/VisualQueryBuilder/todosformigration.mdx
+++ b/src/VisualQueryBuilder/todosformigration.mdx
@@ -26,3 +26,10 @@ function isConflictingFilter(
   return conflict;
 }
 
+Loki/Prom: 
+
+In QueryBuilderHints, 
+  buildDataQueryFromQueryString: (queryString: string) => Q;
+  buildQueryStringFromDataQuery: (dataQuery: Q) => string;
+needs to be added. This can be done trough ds.modifyQuery API
+
